--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,5 @@ dhat-heap = ["dhat"]
 chrono = { version = "0.4.31", optional = true }
 pico-args = "0.5.0"
 dhat = { version = "0.3.2", optional = true }
+regex = "1.10.2"
+lazy_static = "1.4.0"
